# esp-wdf

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Kconfig  README.md  README_CN.md  export.bat  export.fish  export.ps1  export.sh  install.bat  install.fish  install.ps1  install.sh  requirements.ci.txt  requirements.txt  sdkconfig.rename
components/data_sequence/include/: data_seq.h
components/data_sequence/src/: data_seq.c
components/esp_common/: CMakeLists.txt
components/esp_common/include/: esp_attr.h  esp_err.h  esp_wdf_version.h
components/esp_common/src/: esp_err_to_name.c
components/esp_event/include/: esp_event.h
components/esp_system/: CMakeLists.txt  esp_err.c
components/extended_wasm_app/: CMakeLists.txt  Kconfig
components/extended_wasm_app/esp-rainmaker/private_include/: rmaker_wasm_api.h
components/extended_wasm_app/esp-rainmaker/src/: wm_ext_wasm_app_rmaker.c
components/extended_wasm_app/esp_http_client/include/: esp_http_client.h
components/extended_wasm_app/esp_http_client/private_include/: http_client_wasm_api.h
components/extended_wasm_app/esp_http_client/src/: wm_ext_wasm_app_http_client.c
components/extended_wasm_app/esp_lvgl/include/: esp_lvgl.h
components/extended_wasm_app/esp_lvgl/include/config/: lv_conf.h
components/extended_wasm_app/esp_lvgl/include/lvgl/: lvgl.h
components/extended_wasm_app/esp_lvgl/include/lvgl/src/core/: lv_event.h  lv_obj.h
components/extended_wasm_app/esp_lvgl/include/lvgl/src/draw/: lv_img_buf.h
components/extended_wasm_app/esp_lvgl/include/lvgl/src/font/: lv_font.h
components/extended_wasm_app/esp_lvgl/include/lvgl/src/hal/: lv_hal_disp.h
components/extended_wasm_app/esp_lvgl/include/lvgl/src/misc/: lv_anim.h  lv_timer.h
components/extended_wasm_app/esp_lvgl/private_include/: wm_ext_wasm_app_lvgl_func_id.h
components/extended_wasm_app/esp_lvgl/src/: wm_ext_wasm_app_lvgl.c
components/extended_wasm_app/esp_mqtt/include/: mqtt_client.h
components/extended_wasm_app/esp_mqtt/private_include/: mqtt_wasm_api.h
components/extended_wasm_app/esp_mqtt/src/: wm_ext_wasm_app_mqtt.c
components/extended_wasm_app/esp_wifi/include/: esp_wifi.h
components/extended_wasm_app/wifi_provisioning/include/wifi_provisioning/: manager.h  scheme_ble.h  scheme_softap.h
components/extended_wasm_app/wifi_provisioning/private_include/: wifi_prov_wasm_api.h
components/extended_wasm_app/wifi_provisioning/src/: wm_ext_wasm_app_wifi_provisioning.c
components/log/include/: esp_log.h
components/qrcode/: CMakeLists.txt  README.md
components/qrcode/src/: esp_qrcode_main.c
components/wamr/: CMakeLists.txt  Kconfig
components/wamr/app-framework/app-native-shared/: attr_container.c
components/wamr/lib-socket/inc/: wasi_socket_ext.h
components/wamr/lib-socket/src/wasi/: wasi_socket_ext.c
components/wamr/libc-builtin-extended/include/ioctl/: esp_ledc_ioctl.h  esp_spi_ioctl.h
components/wamr/libc-builtin-extended/src/: libc_errno.c  libc_ioctl.c
components/wamr/libc-builtin-sysroot/include/: assert.h  errno.h  fcntl.h  math.h  stdint.h  stdio.h  stdlib.h  string.h  unistd.h
components/wamr/libc-builtin-sysroot/include/sys/: ioctl.h  types.h
examples/coremark/: CMakeLists.txt  sdkconfig.defaults
examples/coremark/main/: CMakeLists.txt  core_main.c  core_portme_posix_overrides.h
examples/file_system/: CMakeLists.txt
examples/file_system/main/: CMakeLists.txt  file_system_main.c
examples/gui/lv_demos/: README.md
examples/gui/lv_demos/lv_demo_music/main/: CMakeLists.txt  lv_demo_music.c  lv_demo_music.h  lv_demo_music_list.c  lv_demo_music_list.h  lv_demo_music_main.c  lv_demo_music_run_main.c
examples/gui/lv_demos/lv_demo_music/main/assets/: img_lv_demo_music_btn_corner_large.c  img_lv_demo_music_btn_list_pause.c  img_lv_demo_music_btn_list_pause_large.c  img_lv_demo_music_btn_list_play.c  img_lv_demo_music_btn_list_play_large.c  img_lv_demo_music_btn_loop.c  img_lv_demo_music_btn_loop_large.c  img_lv_demo_music_btn_next.c  img_lv_demo_music_btn_next_large.c  img_lv_demo_music_btn_pause.c  img_lv_demo_music_btn_pause_large.c  img_lv_demo_music_btn_play.c  img_lv_demo_music_btn_play_large.c  img_lv_demo_music_btn_prev.c  img_lv_demo_music_btn_prev_large.c  img_lv_demo_music_btn_rnd.c  img_lv_demo_music_btn_rnd_large.c  img_lv_demo_music_corner_left.c  img_lv_demo_music_corner_left_large.c  img_lv_demo_music_corner_right.c  img_lv_demo_music_corner_right_large.c  img_lv_demo_music_cover_1.c  img_lv_demo_music_cover_2.c  img_lv_demo_music_cover_3.c  img_lv_demo_music_icon_1.c  img_lv_demo_music_icon_1_large.c  img_lv_demo_music_icon_2.c  img_lv_demo_music_icon_2_large.c  img_lv_demo_music_icon_3.c  img_lv_demo_music_icon_3_large.c  img_lv_demo_music_icon_4.c  img_lv_demo_music_icon_4_large.c  img_lv_demo_music_list_border.c  img_lv_demo_music_list_border_large.c  img_lv_demo_music_logo.c  img_lv_demo_music_slider_knob.c  img_lv_demo_music_slider_knob_large.c  img_lv_demo_music_wave_bottom.c  img_lv_demo_music_wave_bottom_large.c  img_lv_demo_music_wave_top.c  (+1 more)
examples/hello_world/: CMakeLists.txt
examples/hello_world/main/: CMakeLists.txt  hello_world.c
examples/multi_thread/: CMakeLists.txt  sdkconfig.defaults
examples/multi_thread/main/: CMakeLists.txt
examples/protocols/esp_http_client/: CMakeLists.txt  README.md
examples/provisioning/: README.md
examples/provisioning/wifi_prov_mgr/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/rainmaker/switch/: CMakeLists.txt  README.md
examples/simple/event_publisher/: CMakeLists.txt  sdkconfig.defaults
examples/simple/event_subscriber/: CMakeLists.txt
examples/simple/request_handler/: CMakeLists.txt
tools/: check_python_dependencies.py  host_tool.py  idf.py  idf_tools.py  tools.json
tools/ci/: build_examples_cmake.sh
tools/cmake/: build.cmake  component.cmake  idf.cmake  kconfig.cmake  project.cmake  project_description.json.in  targets.cmake  toolchain-wasi.cmake  utilities.cmake  version.cmake
tools/idf_py_actions/: constants.py  core_ext.py
tools/kconfig_new/: confgen.py  config.env.in
(+91 files in other folders)
